@@ -201,6 +201,7 @@ util.recipe.change_recipe_ingredients("quality-module-3",
 
 util.recipe.change_recipe_ingredients("toolbelt-equipment",
   {
+    {type = "item", name = "sp-machined-parts", amount = 2},
     {type = "item", name = "plastic-bar", amount = 3},
     {type = "item", name = "sp-fabric", amount = 5},
     {type = "item", name = "sp-insulation-sheet", amount = 2}
