@@ -421,6 +421,78 @@ data.raw.technology["tesla-weapons"].unit.ingredients = {
   {"electromagnetic-science-pack", 1}
 }
 
+data.raw.technology["fish-breeding"].prerequisites = {
+  "biochamber"
+}
+data.raw.technology["fish-breeding"].unit.ingredients = {
+  {"sp-automation-science-pack-2", 1},
+  {"logistic-science-pack", 1},
+  {"chemical-science-pack", 1},
+  {"sp-material-science-pack-2", 1},
+  {"sp-geological-science-pack-1", 1},
+  {"sp-electronic-science-pack-1", 1},
+  {"metallurgic-science-pack", 1},
+  {"electromagnetic-science-pack", 1}
+}
+
+table.insert(data.raw.technology["captivity"].effects, {type = "unlock-recipe", recipe = "pentapod-egg"})
+data.raw.technology["captivity"].prerequisites = {
+  "bacteria-cultivation"
+}
+data.raw.technology["captivity"].unit.ingredients = {
+  {"sp-automation-science-pack-2", 1},
+  {"logistic-science-pack", 1},
+  {"chemical-science-pack", 1},
+  {"sp-material-science-pack-2", 1},
+  {"sp-geological-science-pack-1", 1},
+  {"sp-electronic-science-pack-1", 1},
+  {"metallurgic-science-pack", 1},
+  {"electromagnetic-science-pack", 1},
+  {"agricultural-science-pack", 1}
+}
+
+data.raw.technology["toolbelt-equipment"].unit.ingredients = {
+  {"sp-automation-science-pack-2", 1},
+  {"sp-logistic-science-pack-2", 1},
+  {"chemical-science-pack", 1},
+  {"sp-electronic-science-pack-1", 1},
+  {"sp-material-science-pack-1", 1},
+  {"sp-military-science-pack-2", 1},
+  {"sp-geological-science-pack-1", 1},
+  {"metallurgic-science-pack", 1},
+  {"electromagnetic-science-pack", 1}
+}
+
+data.raw.technology["epic-quality"].unit.ingredients = {
+  {"sp-automation-science-pack-2", 1},
+  {"sp-logistic-science-pack-2", 1},
+  {"sp-material-science-pack-2", 1},
+  {"sp-geological-science-pack-2", 1},
+  {"sp-electronic-science-pack-2", 1},
+  {"sp-chemical-science-pack-2", 1},
+  {"sp-metallurgic-science-pack-2", 1},
+  {"sp-electromagnetic-science-pack-2", 1},
+  {"production-science-pack", 1},
+  {"utility-science-pack", 1},
+  {"agricultural-science-pack", 1}
+}
+
+--------------------------------------------------------------------------------
+-- MARK: Infinite technologies
+--------------------------------------------------------------------------------
+
+data.raw.technology["health"].unit.ingredients = {
+  {"sp-automation-science-pack-2", 1},
+  {"logistic-science-pack", 1},
+  {"chemical-science-pack", 1},
+  {"sp-material-science-pack-1", 1},
+  {"sp-geological-science-pack-1", 1},
+  {"sp-electronic-science-pack-1", 1},
+  {"metallurgic-science-pack", 1},
+  {"electromagnetic-science-pack", 1},
+  {"agricultural-science-pack", 1}
+}
+
 data.raw.technology["steel-plate-productivity"].prerequisites = {
   "sp-metallurgic-science-pack-2",
 }
@@ -433,6 +505,42 @@ data.raw.technology["steel-plate-productivity"].unit.ingredients = {
   {"sp-chemical-science-pack-2", 1},
   {"production-science-pack", 1},
   {"sp-metallurgic-science-pack-2", 1}
+}
+
+data.raw.technology["plastic-bar-productivity"].prerequisites = {
+  "utility-science-pack",
+  "agricultural-science-pack",
+}
+data.raw.technology["plastic-bar-productivity"].unit.ingredients = {
+  {"sp-automation-science-pack-2", 1},
+  {"sp-logistic-science-pack-2", 1},
+  {"sp-material-science-pack-2", 1},
+  {"sp-geological-science-pack-2", 1},
+  {"sp-electronic-science-pack-2", 1},
+  {"sp-chemical-science-pack-2", 1},
+  {"sp-metallurgic-science-pack-2", 1},
+  {"sp-electromagnetic-science-pack-2", 1},
+  {"production-science-pack", 1},
+  {"utility-science-pack", 1},
+  {"agricultural-science-pack", 1}
+}
+
+data.raw.technology["rocket-fuel-productivity"].prerequisites = {
+  "rocket-fuel",
+  "agricultural-science-pack",
+}
+data.raw.technology["rocket-fuel-productivity"].unit.ingredients = {
+  {"sp-automation-science-pack-2", 1},
+  {"sp-logistic-science-pack-2", 1},
+  {"sp-material-science-pack-2", 1},
+  {"sp-geological-science-pack-2", 1},
+  {"sp-electronic-science-pack-2", 1},
+  {"sp-chemical-science-pack-2", 1},
+  {"sp-metallurgic-science-pack-2", 1},
+  {"sp-electromagnetic-science-pack-2", 1},
+  {"production-science-pack", 1},
+  {"utility-science-pack", 1},
+  {"agricultural-science-pack", 1}
 }
 
 data.raw.technology["low-density-structure-productivity"].prerequisites = {
@@ -520,48 +628,6 @@ data.raw.technology["transport-belt-capacity-2"].unit.ingredients = {
   {"sp-electromagnetic-science-pack-2", 1},
   {"production-science-pack", 1},
   {"utility-science-pack", 1}
-}
-
-data.raw.technology["fish-breeding"].prerequisites = {
-  "biochamber"
-}
-data.raw.technology["fish-breeding"].unit.ingredients = {
-  {"sp-automation-science-pack-2", 1},
-  {"logistic-science-pack", 1},
-  {"chemical-science-pack", 1},
-  {"sp-material-science-pack-2", 1},
-  {"sp-geological-science-pack-1", 1},
-  {"sp-electronic-science-pack-1", 1},
-  {"metallurgic-science-pack", 1},
-  {"electromagnetic-science-pack", 1}
-}
-
-table.insert(data.raw.technology["captivity"].effects, {type = "unlock-recipe", recipe = "pentapod-egg"})
-data.raw.technology["captivity"].prerequisites = {
-  "bacteria-cultivation"
-}
-data.raw.technology["captivity"].unit.ingredients = {
-  {"sp-automation-science-pack-2", 1},
-  {"logistic-science-pack", 1},
-  {"chemical-science-pack", 1},
-  {"sp-material-science-pack-2", 1},
-  {"sp-geological-science-pack-1", 1},
-  {"sp-electronic-science-pack-1", 1},
-  {"metallurgic-science-pack", 1},
-  {"electromagnetic-science-pack", 1},
-  {"agricultural-science-pack", 1}
-}
-
-data.raw.technology["toolbelt-equipment"].unit.ingredients = {
-  {"sp-automation-science-pack-2", 1},
-  {"sp-logistic-science-pack-2", 1},
-  {"chemical-science-pack", 1},
-  {"sp-electronic-science-pack-1", 1},
-  {"sp-material-science-pack-1", 1},
-  {"sp-military-science-pack-2", 1},
-  {"sp-geological-science-pack-1", 1},
-  {"metallurgic-science-pack", 1},
-  {"electromagnetic-science-pack", 1}
 }
 
 --------------------------------------------------------------------------------
