@@ -126,6 +126,7 @@ TODO for 0.3.9
 TODO for 0.3.10
   - Fix energy values of items
   - Fix herbarium technology icon
+  - Add freezer recipe
   - Add freezing recipes
   - Add setting for spoiling for spaghetorio items
     - Remove biochamber item, recipe and technology
