@@ -11,6 +11,8 @@ Date: 2025-04-04
     - Renamed gyro to gyroscope
     - Pressure tube now also requires seal
     - Updated gun turret recipe
+  Balancing:
+    - magazines and shotgun shells do now much more damage
   Bugfixes:
     - Enriching crushed iron ore now correctly produces enriched iron
     - Carbon fiber can be now produced in chemical plant
